# SlamTest

./: .clang-format  .gitignore  CMakeLists.txt  DEBUG.md  package.xml
cfg/: camera_config.yaml  coordinate_drone2.yaml  slam_drone1.yaml  vins_config.yaml
config/: cameraParams.ini
include/slam/: WGS84toCartesian.h  coordinate.h  debug.h  imm.h  location.h  locator.h  simPart.h  slamNode.h
launch/: coordinate2.launch.py  slam.launch.py
src/: coordinate.cc  imm.cc  location.cc  locator.cc  simPart.cc  slamNode.cc
src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  marginalization_factor.cpp  marginalization_factor.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.h
src/featureTracker/: feature_tracker.cpp  feature_tracker.h
src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
